SonarQube cleanup